cursive-bootstrap/tests/ui/E-MOD/E-MOD-2450.cursive
// RUN: compile-fail
// DIAG: E-MOD-2450
// SPEC: 8.2
// DESC: Malformed attribute syntax

[[align(]]  //~ ERROR E-MOD-2450: malformed attribute syntax
record BadAttr {
    value: i32
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
